2004-11-20  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.c: sfile_clear_kenel() : clear also callgraph
	  file depending on module.

2004-11-19  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.h:
	* daemon/opd_sfile.c: fix #971487, daemon was unable to retrieve
	  correctly callgraph sample file for kernel space samples. Fixed by
	  adding relevant information to cg_hash_entry.

	* libpp/callgraph_container.cpp: more verbosity

2004-11-19  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: Fix AMD link (noticed by Emmanuel Araman).

2004-11-18  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opgprof.cpp: ensure we load all callgraph file

2004-11-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/locate_images.cpp: ensure error is always set,
	  callgraph_container was using an uninitialized value.

2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: improve a bit the symbol chosen when
	  multiple symbol live at same vma

2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml: some words about UP kernel > 2.6.9 and the need of
	  lapic at boot.

2004-11-17  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/common_option.h:
	* pp/common_option.cpp: move threshold option from here ...
	* pp/opannotate_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport_options.cpp:
	* pp/opstack_options.cpp: to each of these file using it. Side effect
	  is to remove this option from oparchive which didn't handle it.
	
	* doc/oparchive.1.in:
	* doc/oprofile.xml: there isn't any --threshold option to oparchive

2004-11-07  Kristis Makris  <kristis.makris@asu.edu>

	* doc/internals.xml: fix typo

2004-11-01  Maynard Johnson  <maynardj@us.ibm.com>

	* events/ppc64/970/events: Make min count 10000 for all PM_INST_CMPL;
	  and remove redundant event in group 2
	* events/ppc64/power4/event_mappings: Set LSB of MMCRA so kernel kludge
	  can be removed at some later date