@@ -1,5 +1,10 @@
 2004-11-20  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* daemon/opd_stats.c: some statistics are useless, don't print them
+	  if we can't read the oprofilefs files.
+
+2004-11-20  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* daemon/opd_sfile.c: sfile_clear_kenel() : clear also callgraph
 	  file depending on module.
 
